// Copyright Â© 2020 AMIS Technologies
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package getamis.alice.crypto.ecpointgrouplaw;

option go_package = "github.com/getamis/alice/crypto/ecpointgrouplaw";

message EcPointMessage {
  enum Curve {
    P224 = 0;
    P256 = 1;
    P384 = 2;
    // Above curves are not implemented
    S256 = 3;
    EDWARD25519 = 4;
  }
  Curve curve = 1;
  bytes x = 2;
  bytes y = 3;
}
 